# simple_django

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
store/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_product.py  0003_product_is_published.py  0004_alter_product_price.py
store/templates/store/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
store/tests/: conftest.py  test_forms.py  test_models.py  test_views.py
