[project]
name = "simple-django"
version = "0.1.0"
description = "Django simple python app"
authors = [
    {name = "Vladimir Bogdanov",email = "vld.bgdn@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (==5.2)",
    "black (>=25.1.0,<26.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
