[project]
name = "simple-django"
version = "0.1.0"
description = "Django simple python app"
authors = [
    {name = "Vladimir Bogdanov",email = "vld.bgdn@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (==5.2)",
    "black (>=25.1.0,<26.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "coverage (>=7.8.2,<8.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
